# setup_stereo_pgr_gige

./: CMakeLists.txt  README.md  package.xml
include/: ini_pgr_gige_stereo.h
launch/: setup_ip_pack_ethernetswitch.launch  setup_ip_pack_mustang.launch
src/: ini_pgr_gige_stereo.cpp  setup_stereo_pgr_gige.cpp
